# Matching-Engine

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  vcpkg.json
.cache/clangd/index/: bench_engine.cpp.5ED24DE5B06E8483.idx  clock.cpp.3DCEFAB49C2DAF8A.idx  clock.hpp.34F125CAA02CF0FD.idx  errors.hpp.C23775D9C6B76259.idx  matching_engine.cpp.13A5F77C0ACD01CD.idx  matching_engine.hpp.FABD0CC239BC2A68.idx  memory.cpp.2B5E416627115FAE.idx  memory.hpp.31FAAFB21518258C.idx  order_book.cpp.91DE67F3CA23DA62.idx  order_book.hpp.DFD5AE0C8DCFA0AF.idx  order_pool.cpp.9FF873C426405F38.idx  order_pool.hpp.F86AA1CFD8558AAB.idx  test_matching_engine.cpp.B9775A6972E8F63F.idx  test_order_book.cpp.80483CC1768D6081.idx  test_order_pool.cpp.D94AEB778E19BA20.idx  test_types.cpp.4D7A15B3ECF2775B.idx  thread.cpp.AC48E99AAA660158.idx  thread.hpp.AA697B4D241FA195.idx  types.hpp.B60D612F4DB4F276.idx
engine/: errors.hpp  matching_engine.cpp  matching_engine.hpp  order_book.cpp  order_book.hpp  order_pool.cpp  order_pool.hpp  types.hpp
platform/: clock.cpp  clock.hpp  memory.cpp  memory.hpp  thread.cpp  thread.hpp
tests/bench/: bench_engine.cpp
tests/unit/: test_matching_engine.cpp  test_order_book.cpp  test_order_pool.cpp  test_types.cpp
